force-app/main/default/objects/Filter_Criteria__c/Filter_Criteria__c.object-meta.xml
<CustomObject>
    <description>Stores IA Features selected when creating a program.  A filters is often referred to as a &quot;price rule&quot;.  Records are created in this object via apex.  A new record is created when a user selects products in the product selection visualforce page.  
Object Type: IA
Integrated: N</description>
    <label>Filter Criteria</label>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Filter Criteria</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filter Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>