force-app/main/default/objects/Filter_Criteria__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>A formula field to bring in the category of the IA Feature.
Field Type: IA
Integrated: N</description>
    <formula>TEXT(IA_Feature__r.Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A formula field to bring in the category of the IA Feature.</inlineHelpText>
    <label>Category</label>
    <type>Text</type>
</CustomField>