force-app/main/default/objects/Filter_Criteria__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>The discount % that was entered for a product filter on the product selection visualforce page.  Used to apply discounts to products which are auto added to a program.
Field Type: IA
Integrated: N</description>
    <inlineHelpText>The discount % that was entered for a product filter on the product selection visualforce page.  Used to apply discounts to products which are auto added to a program.</inlineHelpText>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>