force-app/main/default/objects/Filter_Criteria__c/fields/Filter_BE_Details__c.field-meta.xml
<CustomField>
    <fullName>Filter_BE_Details__c</fullName>
    <description>Field used to display filter criteria details on review products visualforce page.
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Field used to display filter criteria details on review products visualforce page.</inlineHelpText>
    <label>Filter BE Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>