force-app/main/default/objects/Filter_Criteria__c/fields/Filter_Name__c.field-meta.xml
<CustomField>
    <fullName>Filter_Name__c</fullName>
    <description>A formula field to bring in the Feature Name from the IA Feature Object.
Field Type: IA
Integrated: N</description>
    <formula>IA_Feature__r.Feature_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A formula field to bring in the Feature Name from the IA Feature Object.</inlineHelpText>
    <label>Filter Name</label>
    <type>Text</type>
</CustomField>