force-app/main/default/objects/Filter_Criteria__c/fields/Filter_Number__c.field-meta.xml
<CustomField>
    <fullName>Filter_Number__c</fullName>
    <description>Used to associate filter criteria records with one another.  (i.e. if 3 filter criteria records have the same filter number they all go together and make up a &quot;price rule&quot;)
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Used to associate filter criteria records with one another.  (i.e. if 3 filter criteria records have the same filter number they all go together and make up a &quot;price rule&quot;)</inlineHelpText>
    <label>Filter Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>