force-app/main/default/objects/Filter_Criteria__c/fields/IA_Feature__c.field-meta.xml
<CustomField>
    <fullName>IA_Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the IA Feature object.  Associates a filter criteria record with an IA Feature.
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Lookup to the IA Feature object.  Associates a filter criteria record with an IA Feature.</inlineHelpText>
    <label>IA Feature</label>
    <referenceTo>IA_Feature__c</referenceTo>
    <relationshipLabel>Filter Criteria</relationshipLabel>
    <relationshipName>Filter_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>