force-app/main/default/objects/Filter_Criteria__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>The Styles that are returned based on the defined Filter Criteria. Used in the Product Search on the Product Review screen.</description>
    <inlineHelpText>The Styles that are returned based on the defined Filter Criteria. Used in the Product Search on the Product Review screen.</inlineHelpText>
    <label>Product Code</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>