force-app/main/default/objects/Filter_Criteria__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Program object. Associates a filter criteria record with a Program. 
Field Type: IA 
Integrated: N</description>
    <inlineHelpText>Lookup to the Program object. Associates a filter criteria record with a Program.</inlineHelpText>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Filter Criteria</relationshipLabel>
    <relationshipName>Filter_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>