force-app/main/default/objects/Filter_Criteria__c/fields/Results_Count__c.field-meta.xml
<CustomField>
    <fullName>Results_Count__c</fullName>
    <label>Results Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>