force-app/main/default/objects/Filter_Criteria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Filter_Number__c</columns>
    <columns>IA_Feature__c</columns>
    <columns>Program__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>